# trusted-firmware-m

./: .editorconfig  .gitignore  .readthedocs.yaml  CMakeLists.txt  CommonConfig.cmake  ConfigCoreIPC.cmake  Kconfig.misc  license.rst  pyproject.toml  readme.rst  toolchain_ARMCLANG.cmake  toolchain_ATFE.cmake  toolchain_CLANG.cmake  toolchain_GNUARM.cmake  toolchain_IARARM.cmake
bl1/bl1_1/shared_lib/: CMakeLists.txt  util.c
bl1/bl1_1/shared_lib/crypto/: crypto_mbedcrypto.c  mbedcrypto_base_config.h  mbedcrypto_config.h  tf_psa_crypto_base_config.h
bl1/bl1_1/shared_lib/interface/: bl1_crypto.h  bl1_random.h  crypto.h  crypto_key_defs.h  otp.h  pq_crypto.h  util.h
bl1/bl1_1/shared_lib/otp/: otp_default.c
bl1/bl1_1/shared_lib/pq_crypto/: pq_crypto_psa.c
bl1/bl1_2/: CMakeLists.txt  bl1_2_image_binding.c  bl1_2_image_binding.h  bl1_dummy_rotpk.prv  main.c
bl1/bl1_2/default_config/: bl1_2_config.h
bl1/bl1_2/lib/: image.c
bl1/bl1_2/lib/interface/: image.h  image_layout_bl1_2.h
bl1/bl1_2/scripts/: create_bl2_img.py
bl1/bl1_2/scripts/modules/: bl2_image_config.py
lib/ext/: CMakeLists.txt
lib/ext/cmsis/: 0001-Add-missing-CPPWR-definitions-243.patch  CMakeLists.txt
lib/ext/cryptocell-312-runtime/: CMakeLists.txt
lib/ext/cryptocell-312-runtime/codesafe/: CMakeLists.txt
lib/ext/dtpm/: CMakeLists.txt
lib/ext/ethos_u_core_driver/: CMakeLists.txt
lib/ext/eventlog/: CMakeLists.txt
lib/ext/eventlog/include/: debug.h
lib/ext/mbedcrypto/: 0001-Add-TF-M-Builtin-Key-Loader-driver-entry-points.patch  0002-Enable-crypto-code-sharing-between-independent-binar.patch  0003-Allow-SE-key-to-use-key-vendor-id-within-PSA-crypto.patch  0004-Initialise-driver-wrappers-as-first-step-in-psa_cryp.patch  0005-Hardcode-CC3XX-entry-points.patch  0006-Enable-psa_can_do_hash.patch  0007-P256M-Add-option-to-force-not-use-of-asm.patch  0008-Move-NIST_KW-to-PSA-API.patch  0008-psa-mac-only-call-memset-if-key_length-is-less-than-.patch  0009-Add-CC3XX-Opaque-Key-entry-points.patch  0009-Add-TF-M-Opaque-Key-entry-points.patch  0009-psa-mac-only-call-memset-if-key_length-is-less-than-.patch  0010-Add-CC3XX-Opaque-Key-entry-points.patch  0010-Add-TF-M-Opaque-key-entry-points-PSA-Cipher-API.patch  0010-psa-Reorganise-values-of-PSA_ERROR_.patch  0011-Define-base-attributes-and-structure-for-SP800-108-C.patch  0012-Add-experimental-LMS-support-as-a-vendor-extension.patch  CMakeLists.txt
lib/ext/mcuboot/: 0001-bootutil-Parse-key-ID-for-built-in-keys.patch  0001-bootutil-Parse-key-id-for-built-in-keys.patch  0002-imgtool-Add-support-for-multiple-signatures.patch  0003-bootutil-Add-support-for-multi-sign-of-same-type.patch  0004-imgtool-Rename-key-ids-to-psa-key-ids.patch  0005-BL2-Fix-TFM-CI-failure-due-to-FIH-call.patch  0006-Add-support-for-AES-KW-encrypted-images-in-MCUboot.patch  0007-Remove-AES-key-wrap-Mbedtls-APIs.patch  0008-Add-support-to-key-wrap-using-PSA-key-id.patch  0009-BL2-Backport-some-changes-from-mcuboot-PR-2305.patch
lib/ext/psa-adac/: CMakeLists.txt
lib/ext/qcbor/: 0001-Disable-gcc-Wmaybe-uninitialized-because-of-false-po.patch  0002-Add-missing-type-casts.patch  CMakeLists.txt
lib/ext/t_cose/: 0001-Add-t_cose_key_encode-API.patch  0002-Add-t_cose_key_decode-API.patch  0003-Import-EC-keys-with-ECDSA-xxx-algo-rather-than-ECDH.patch  0004-Remove-unused-EdDSA-calls-to-help-reduce-code-size.patch  0005-Remove-or-disable-unused-functions-in-PSA-Crypto-lay.patch  0006-Disable-unnecessary-test-cases.patch  0007-Refining-signature-buffer-size.patch  0008-Refactor-t_cose_crypto_is_algorithm_supported-in-PSA.patch  0009-Skip-AEAD-and-ECDH-tests-when-unsupported.patch  0010-Add-weak-stubs-to-fix-Armclang-armlink-L6218E-on-unu.patch  0011-Fix-static-analyzer-warnings.patch  0012-Fix-boundary-checks-to-avoid-out-of-bound-memory-acc.patch  0013-Align-PSA-crypto-layer-with-TF-PSA-Crypto-v1.0.0.patch  CMakeLists.txt
lib/ext/t_cose/inc/: t_cose_key.h
lib/ext/tf-m-extras/: CMakeLists.txt
lib/ext/tf-m-tests/: version.txt
lib/ext/tf-psa-crypto/: 0001-Add-generated-files-to-the-source-tree.patch  0002-Add-TF-M-Builtin-Key-Loader-driver-entry-points.patch  0003-Enable-crypto-code-sharing-between-independent-binar.patch  0004-Allow-SE-key-to-use-key-vendor-id-within-PSA-crypto.patch  0004-Initialise-driver-wrappers-as-first-step-in-psa_cryp.patch  0005-Hardcode-CC3XX-entry-points.patch  0005-Initialise-driver-wrappers-as-first-step-in-psa_cryp.patch  0006-Hardcode-CC3XX-entry-points.patch  0006-P256M-Add-option-to-force-not-use-of-asm.patch  0007-P256M-Add-option-to-force-not-use-of-asm.patch  0007-psa-mac-only-call-memset-if-key_length-is-less-than-.patch  0008-Add-CC3XX-Opaque-Key-entry-points.patch  0008-psa-mac-only-call-memset-if-key_length-is-less-than-.patch  0009-Add-CC3XX-Opaque-Key-entry-points.patch  0009-Define-base-attributes-and-structure-for-SP800-108-C.patch  0010-Add-experimental-LMS-support-as-a-vendor-extension.patch  0010-Define-base-attributes-and-structure-for-SP800-108-C.patch  0011-Add-experimental-LMS-support-as-a-vendor-extension.patch  0011-Exclude-built-in-definitions-for-PSA-Crypto-client.patch  0012-Exclude-context-definitions-for-PSA-Crypto-client.patch  0012-Re-add-psa_can_do_cipher-to-public-interface.patch  0013-Implement-SP800-108-Counter-CMAC-key-derivation-in-P.patch  0013-Re-add-psa_can_do_cipher-to-public-interface.patch  0014-Support-use-of-cc3xx-opaque-keys-in-PSA-Crypto-core.patch  0015-Re-add-support-for-AES-Keywrap-for-TF-M.patch  0016-Do-not-define-__STDC_WANT_LIB_EXT1__-with-ATfE.patch  0018-Avoid-unreachable-AES-implementation-fallback-return.patch  0019-Avoid-unreachable-md-clone-success-return.patch  CMakeLists.txt
lib/ext/thin-psa-crypto-core/: thin_psa_crypto_core.c
lib/fih/: CMakeLists.txt
lib/fih/inc/: fih.h  tfm_fih_platform.h
lib/fih/src/: fih.c
lib/gpt/: CMakeLists.txt  config.cmake
lib/gpt/inc/: gpt.h
lib/gpt/src/: gpt.c  gpt_defs.c  gpt_defs.h  gpt_modify.c  gpt_parse.c
lib/gpt/src/io/: gpt_io.c  gpt_io.h  (+4 more)
lib/gpt/unittests/: CMakeLists.txt
lib/tfm_helper_lib/: CMakeLists.txt  endian.h  tfm_utils.h
(+696 files in other folders)
