[project]
name = "trusted-firmware-m"
description = "Trusted Firmware-M (TF-M) Python dependencies."
authors = [{ name = "Arm Ltd." }]
license = "BSD-3-Clause"
readme = "readme.rst"
version = "2.2.0"

requires-python = ">=3.10"

dependencies = [
    "pyhsslms (>=2.0.0,<2.1.0)",
    "cbor2 (>=5.6.5,<6.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "cryptography (>=36.0.1)",
    "pyasn1 (>=0.6.1,<0.7.0)",
    "imgtool (>=2.1.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "jsonschema (>=4.23.0,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "ecdsa (>=0.19.1,<0.20.0)",
    "kconfiglib (>=14.1.0,<15.0.0)",
    "networkx (>=3.1,<4.0)",
    "pyelftools (>=0.32,<0.33)",
    "rich (>=13.9.4,<14.0.0)",
    "libclang (>=18.1.1,<19.0.0)",
]

[project.optional-dependencies]
docs = [
  "sphinx==5.0.0",
  "sphinx-rtd-theme>=1.0.0",
  "sphinxcontrib-plantuml==0.30",
  "sphinxcontrib-svg2pdfconverter==1.3.0",
  "sphinx-tabs==3.4.7",
  "jinja2==3.1.6",
  "graphviz==0.20.3",
  "latex==0.7.0",
  "m2r2<0.3.3.post2",
  "setuptools==78.1.0"
]

[tool.setuptools]
package-dir = {"" = "tools/modules"}

[tool.setuptools.packages.find]
where = ["tools/modules"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
